# mmdeploy

./: .gitignore  CMakeLists.txt
cmake/: MMDeploy.cmake  loader.cpp.in
csrc/mmdeploy/archive/: json_archive.h  value_archive.h
csrc/mmdeploy/codebase/: common.h
csrc/mmdeploy/core/: CMakeLists.txt  archive.h  device.h  device_impl.cpp  mat.h  model.h  module.cpp  module.h  net.cpp  net.h  operation.cpp  operation.h  profiler.h  registry.cpp  registry.h  serialization.h  tensor.h  transform.cpp  transform.h  value.h
csrc/mmdeploy/execution/: bulk.h  concepts.h  ensure_started.h  expand.h  just.h  let_value.h  on.h  run_loop.h  schedule_from.h  split.h  start_detached.h  submit.h  sync_wait.h  then.h  type_erased.h  utility.h  when_all.h  when_all_value.h
csrc/mmdeploy/experimental/: module_adapter.h
csrc/mmdeploy/graph/: common.h  inference.cpp  task.cpp
csrc/mmdeploy/net/: net_module.cpp  net_module.h
csrc/mmdeploy/operation/: CMakeLists.txt  operations.cpp  operations.h
csrc/mmdeploy/operation/cpu/: CMakeLists.txt  crop.cpp  cvtcolor.cpp  flip.cpp  hwc2chw.cpp  normalize.cpp  pad.cpp  resize.cpp  to_float.cpp
csrc/mmdeploy/operation/cuda/: CMakeLists.txt  crop.cpp  cvtcolor.cpp  flip.cpp  hwc2chw.cpp  normalize.cpp  pad.cpp  resize.cpp  to_float.cpp
csrc/mmdeploy/preprocess/: transform_module.cpp
demo/csrc/cpp/: text_ocr.cxx
demo/python/: triton_client.py
mmdeploy/runtime/: __init__.py  classifier.py  detector.py  pose_detector.py  text_detector.py
tests/test_csrc/archive/: test_json_archive.cpp  test_value_archive.cpp
(+50 files in other folders)
